kustomize/overlay/staging/qetesting-staging-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: qetesting-staging
  labels:
    organizationId: org_20c6c833-c6da-41ca-85b9-9573910c5b75
    projectId: project_b7c64762-48e8-4b3b-a0b8-3b97faeb217f
    environmentId: env_fcb8722b-9ada-4602-b7d0-a674301e65d0
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_fcb8722b-9ada-4602-b7d0-a674301e65d0
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
