kustomize/overlay/staging/qetesting2-staging-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: qetesting2-staging
  labels:
    organizationId: org_20c6c833-c6da-41ca-85b9-9573910c5b75
    projectId: project_c51656d0-4d61-40eb-9d76-2681b7eb493e
    environmentId: env_cca49729-8f37-4aa4-981e-155a643363e6
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_cca49729-8f37-4aa4-981e-155a643363e6
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
